welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: not found: value nbPas
  nbPas = nbPas + 1;
  ^